Page MenuHome GnuPG

pinentry-curses crashes with SIGSEGV if can't find terminfo
Closed, ResolvedPublic

Description

I've been creating initrd with gnupg and pinentry-curses inside. While doing
that I've found that pinentry-curses crashes if it can't find terminfo.
Additional information here (Gentoo bugzilla):
https://bugs.gentoo.org/show_bug.cgi?id=376375
My guess is that it shouldn't just crash with SIGSEGV but should exit telling
something like "error: can't find terminfo".

Details

Event Timeline

dark_templar set External Link to https://bugs.gentoo.org/show_bug.cgi?id=376375.
dark_templar set Version to 0.8.2.
dark_templar added a subscriber: dark_templar.

Fixed with commit 726c005 for 0.9.2.

You will now get an gpg-error codes like ENOENT, ENOTTY and GPG_ERR_TOO_SHORT
and not always GPG_ERR_CANCELED. I was not able to replicate a crash but that
might have been fixed in an earlier version.

werner claimed this task.
werner removed a project: Restricted Project.