Return better error codes.

* assuan/assuan.h (ASSUAN_Too_Short): New
(ASSUAN_ENOENT, ASSUAN_ENOTTY): New.
* pinentry/pinentry-curses.c: Include assuan.h.
(dialog_create, dialog_run): Set specific error codes.
* pinentry/pinentry.h (struct pinentry): Add field specific_err.
* pinentry/pinentry.c (cmd_getpin): Return specific_err.
(cmd_confirm, cmd_message): Ditto.
--

GnuPG-bug-id: 1463