pinentry/pinentry-curses.c
@@ -47,6 +47,7 @@
 #endif /*HAVE_WCHAR_H*/
 
 #include "pinentry.h"
+#include "assuan.h"
 
 /* FIXME: We should allow configuration of these button labels and in
    any case use the default_ok, default_cancel values if available.
@@ -242,6 +243,7 @@ dialog_create (pinentry_t pinentry, dialog_t dialog)
         if (!what)							\
 	  {								\
 	    err = 1;							\
+            pinentry->specific_err = ASSUAN_Locale_Problem;             \
 	    goto out;							\
 	  }								\
       }									\
@@ -262,6 +264,7 @@ dialog_create (pinentry_t pinentry, dialog_t dialog)
 	  if (!new)							\
 	    {								\
 	      err = 1;							\
+              pinentry->specific_err = ASSUAN_Out_Of_Core;              \
 	      goto out;							\
 	    }								\
 	  new[0] = '<';							\
@@ -274,6 +277,7 @@ dialog_create (pinentry_t pinentry, dialog_t dialog)
       if (!dialog->which)						\
         {								\
 	  err = 1;							\
+          pinentry->specific_err = ASSUAN_Locale_Problem;               \
 	  goto out;							\
 	}								\
     }									\
@@ -339,6 +343,7 @@ dialog_create (pinentry_t pinentry, dialog_t dialog)
   if (y > size_y)
     {
       err = 1;
+      pinentry->specific_err = ASSUAN_Too_Short;
       goto out;
     }
 
@@ -393,6 +398,7 @@ dialog_create (pinentry_t pinentry, dialog_t dialog)
   if (x > size_x)
     {
       err = 1;
+      pinentry->specific_err = ASSUAN_Too_Short;
       goto out;
     }
 
@@ -738,13 +744,17 @@ dialog_run (pinentry_t pinentry, const char *tty_name, const char *tty_type)
     {
       ttyfi = fopen (tty_name, "r");
       if (!ttyfi)
-	return -1;
+        {
+          pinentry->specific_err = ASSUAN_ENOENT;
+          return -1;
+        }
       ttyfo = fopen (tty_name, "w");
       if (!ttyfo)
 	{
 	  int err = errno;
 	  fclose (ttyfi);
 	  errno = err;
+          pinentry->specific_err = ASSUAN_ENOENT;
 	  return -1;
 	}
       screen = newterm (tty_type, ttyfo, ttyfi);
@@ -757,6 +767,7 @@ dialog_run (pinentry_t pinentry, const char *tty_name, const char *tty_type)
           if (!(isatty(fileno(stdin)) && isatty(fileno(stdout))))
             {
               errno = ENOTTY;
+              pinentry->specific_err = ASSUAN_ENOTTY;
               return -1;
             }
 	  init_screen = 1;
@@ -799,6 +810,7 @@ dialog_run (pinentry_t pinentry, const char *tty_name, const char *tty_type)
   /* Create the dialog.  */
   if (dialog_create (pinentry, &diag))
     {
+      /* Note: pinentry->specific_err has already been set.  */
       endwin ();
       if (screen)
         delscreen (screen);
